[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
sentry = { version = "0.48", features = ["tracing", "logs"] }
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tower-http = { version = "0.5", features = ["trace"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
subtle = "2.6"
